# pdf_measure_tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pdf_measure_tool/: __init__.py  __main__.py  calibration.py  config.py  export.py  gui.py  main.py  measurement.py  pdf_loader.py  visualization.py
